Este commit aplicado ajusta rotas e adiciona collection via insomina, scripts e conexao com a base
